--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -94,7 +94,7 @@
             app:layout_constraintStart_toEndOf="@+id/thirdText"
             app:layout_constraintTop_toTopOf="@+id/thirdText" />
 
-        <ImageView
+        <!--<ImageView
             android:id="@+id/profileImageView"
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -104,7 +104,7 @@
             android:onClick="gotoMyProfile"
             android:src="@drawable/ic_baseline_person_24"
             app:layout_constraintEnd_toStartOf="@id/mainPageGuidLine2"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />-->
 
         <SearchView
             android:id="@+id/mainPageSearchView"
@@ -164,10 +164,10 @@
                             android:id="@+id/sixthText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="40dp"
+                            android:layout_marginStart="90dp"
                             android:layout_marginTop="100dp"
                             android:fontFamily="@font/open_sans_extra_bold"
-                            android:text="House Information"
+                            android:text="My House"
                             android:textColor="@color/black"
                             android:textSize="22sp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -202,7 +202,7 @@
                             app:layout_constraintStart_toEndOf="@+id/housePageRatingBar"
                             app:layout_constraintTop_toBottomOf="@+id/sixthText" />-->
 
-                        <TextView
+                        <!--<TextView
                             android:id="@+id/eighthText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -213,90 +213,7 @@
                             android:textSize="15sp"
                             app:layout_constraintEnd_toEndOf="@+id/sixthText"
                             app:layout_constraintStart_toStartOf="@+id/sixthText"
-                            app:layout_constraintTop_toBottomOf="@+id/sixthText" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                </androidx.cardview.widget.CardView>
-
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/customerPageCardView"
-                    android:layout_width="match_parent"
-                    android:layout_height="226dp"
-                    android:layout_marginTop="20dp">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <!-- image_two -->
-                        <View
-                            android:id="@+id/customerPageView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/customers"
-                            android:onClick="bringCustomers"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
-
-                        <TextView
-                            android:id="@+id/ninthText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="12dp"
-                            android:layout_marginTop="150dp"
-                            android:fontFamily="@font/open_sans_extra_bold"
-                            android:text="Customer Information"
-                            android:textColor="@color/black"
-                            android:textSize="22sp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-                        <!--<RatingBar
-                            android:id="@+id/customerPageRatingBar"
-                            style="?android:attr/ratingBarStyleSmall"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="12dp"
-                            android:layout_marginLeft="12dp"
-                            android:layout_marginTop="16dp"
-                            android:max="5"
-                            android:numStars="5"
-                            android:progressTint="@color/colorAccent"
-                            android:rating="4.5"
-                            android:stepSize="0.5"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/ninthText" />
-                        <TextView
-                            android:id="@+id/tenthText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="12dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="10dp"
-                            android:fontFamily="@font/open_sans_bold"
-                            android:text="4.75"
-                            android:textColor="@color/white"
-                            android:textSize="15sp"
-                            app:layout_constraintStart_toEndOf="@+id/customerPageRatingBar"
-                            app:layout_constraintTop_toBottomOf="@+id/ninthText" />-->
-                        <TextView
-                            android:id="@+id/eleventhText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/open_sans_light"
-                            android:text="(600)"
-                            android:textColor="@color/black"
-                            android:textSize="15sp"
-                            app:layout_constraintEnd_toEndOf="@+id/ninthText"
-                            app:layout_constraintStart_toStartOf="@+id/ninthText"
-                            app:layout_constraintTop_toBottomOf="@+id/ninthText" />
+                            app:layout_constraintTop_toBottomOf="@+id/sixthText" />-->
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -330,11 +247,11 @@
                             android:id="@+id/twelfthText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="0dp"
+                            android:layout_marginStart="20dp"
                             android:layout_marginTop="136dp"
                             android:fontFamily="@font/open_sans_extra_bold"
                             android:gravity="center"
-                            android:text="House Owner Information"
+                            android:text="Applicants to My House"
                             android:textColor="@color/black"
                             android:textSize="22sp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -369,7 +286,7 @@
                             android:textSize="15sp"
                             app:layout_constraintStart_toEndOf="@+id/houseOwnerRatingBar"
                             app:layout_constraintTop_toBottomOf="@+id/twelfthText" />-->
-                        <TextView
+                        <!--<TextView
                             android:id="@+id/fourteenthText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -381,11 +298,12 @@
                             android:textSize="15sp"
                             app:layout_constraintEnd_toEndOf="@+id/twelfthText"
                             app:layout_constraintStart_toStartOf="@+id/twelfthText"
-                            app:layout_constraintTop_toBottomOf="@+id/twelfthText" />
+                            app:layout_constraintTop_toBottomOf="@+id/twelfthText" />-->
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.cardview.widget.CardView>
+
             </LinearLayout>
         </ScrollView>
 
