--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/singleProfileImageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/envervalencia" />
+                    android:src="@drawable/profile_avatar" />
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
@@ -98,13 +98,13 @@
             android:layout_centerHorizontal="true"
             app:cardCornerRadius="5dp">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:weightSum="3"
                 android:orientation="horizontal"
                 android:padding="10dp">
-                <LinearLayout
+                <!--<LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -126,21 +126,28 @@
                         android:textColor="#2196F3"
                         android:textStyle="bold"/>
 
-                </LinearLayout>
+                </LinearLayout>-->
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="109dp"
+                    android:layout_height="81dp"
+                    android:layout_marginEnd="40dp"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="vertical"
-                    android:gravity="center">
+                    app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:layout_editor_absoluteY="0dp"
+                    tools:ignore="MissingConstraints">
+
                     <TextView
                         android:id="@+id/singleProfilePointHeader"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Age"
-                        android:textSize="17dp"
-                        android:textColor="#000"/>
+                        android:textColor="#000"
+                        android:textSize="17dp" />
+
                     <EditText
                         android:id="@+id/updateEditTextAge"
                         style="@style/modifiedUpdateEditText"
@@ -157,30 +164,38 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/linearLayout"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="35dp"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="vertical"
-                    android:gravity="center">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:layout_editor_absoluteY="16dp">
+
                     <TextView
                         android:id="@+id/singleProfileFromThisDayHeader"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="0dp"
                         android:text="From This Day"
-                        android:textSize="17dp"
-                        android:textColor="#000"/>
+                        android:textColor="#000"
+                        android:textSize="17dp" />
+
                     <TextView
                         android:id="@+id/singleProfileFromThisDay"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         android:text="Şu Tarihren Beri"
-                        android:textSize="15sp"
                         android:textColor="#2196F3"
-                        android:textStyle="bold"/>
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </androidx.cardview.widget.CardView>
@@ -189,7 +204,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
