--- a/app/src/main/res/layout/activity_house_single_profile.xml
+++ b/app/src/main/res/layout/activity_house_single_profile.xml
@@ -11,8 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/backgroundhouse"
-        >
+        android:background="@drawable/sinlgehousebackround">
 
         <ImageView
             android:id="@+id/singleHouseImageView"
@@ -53,7 +52,7 @@
 
         <TextView
             android:id="@+id/singleHouseCountOfBathroom"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="35dp"
@@ -68,103 +67,130 @@
 
         <TextView
             android:id="@+id/singleHouseCountOfBedroom"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="countOfBedroom"
             android:textColor="@color/purple_200"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseCountOfBathroom" />
 
+
         <TextView
             android:id="@+id/singleHouseCountOfSalon"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="countOfSalon"
             android:textColor="@color/purple_200"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseCountOfBedroom" />
 
-
         <TextView
             android:id="@+id/singleHouseCountOfOwner"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="countOfOwner"
             android:textColor="@color/purple_200"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseCountOfSalon" />
 
         <TextView
             android:id="@+id/singleHouseHeatResource"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="heatResource"
             android:textColor="@color/purple_200"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseCountOfOwner" />
 
         <TextView
             android:id="@+id/singleHouseInternetPaved"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="internetPaved"
             android:textColor="@color/purple_200"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseHeatResource" />
 
+
         <TextView
             android:id="@+id/singleHouseFloor"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="floor"
             android:textColor="@color/purple_200"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseInternetPaved" />
 
-
         <TextView
             android:id="@+id/singleHouseRent"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="rent"
             android:textColor="@color/purple_200"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseFloor" />
+
+        <ImageView
+            android:id="@+id/likeButton"
+            android:layout_width="31dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/singleHouseAddress"
+            app:srcCompat="@drawable/ic_baseline_like" />
+
+        <!--<ImageView
+            android:id="@+id/likedButton"
+            android:layout_width="31dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/likeButton"
+            app:srcCompat="@drawable/ic_baseline_liked" />-->
 
         <!--
         <TextView
