--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -188,7 +188,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Şu Tarihren Beri"
+                        android:text="From This Day"
                         android:textColor="#2196F3"
                         android:textSize="15sp"
                         android:textStyle="bold" />
