--- a/app/src/main/res/layout/activity_house_single_profile.xml
+++ b/app/src/main/res/layout/activity_house_single_profile.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="25dp"
             android:text="HouseId"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,7 +43,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="25dp"
             android:text="houseAddress"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseId" />
@@ -51,21 +51,21 @@
 
 
         <TextView
-            android:id="@+id/singleHouseCountOfBathroom"
+            android:id="@+id/singleHouseType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="35dp"
             android:layout_marginEnd="5dp"
-            android:text="countOfBathroom"
-            android:textColor="@color/purple_200"
+            android:text="Ev Tipi"
+            android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseAddress" />
 
-        <TextView
+        <!--<TextView
             android:id="@+id/singleHouseCountOfBedroom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/singleHouseCountOfBathroom" />
+            app:layout_constraintTop_toBottomOf="@+id/singleHouseType" />
 
 
         <TextView
@@ -94,7 +94,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/singleHouseCountOfBedroom" />
+            app:layout_constraintTop_toBottomOf="@+id/singleHouseCountOfBedroom" />-->
 
         <TextView
             android:id="@+id/singleHouseCountOfOwner"
@@ -104,12 +104,12 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="countOfOwner"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/singleHouseCountOfSalon" />
+            app:layout_constraintTop_toBottomOf="@+id/singleHouseType" />
 
         <TextView
             android:id="@+id/singleHouseHeatResource"
@@ -119,7 +119,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="heatResource"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -134,7 +134,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="internetPaved"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -150,7 +150,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="floor"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -165,12 +165,61 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="rent"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseFloor" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/houseOwnersInfo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/singleHouseRent">
+
+            <TextView
+                android:id="@+id/singleHouseOwner1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:text="HouseOwner1"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:onClick="goToOwnerProfile1"/>
+
+            <TextView
+                android:id="@+id/singleHouseOwner2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:text="HouseOwner2"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:onClick="goToOwnerProfile2"/>
+
+            <TextView
+                android:id="@+id/singleHouseOwner3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:text="HouseOwner3"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:onClick="goToOwnerProfile3"/>
+
+        </LinearLayout>
+
 
         <ImageView
             android:id="@+id/likeButton"
