--- a/app/src/main/res/layout/houses_row.xml
+++ b/app/src/main/res/layout/houses_row.xml
@@ -85,7 +85,7 @@
                     app:layout_constraintStart_toEndOf="@+id/customerRecyclerViewProfileImage"
                     app:layout_constraintTop_toBottomOf="@+id/housesRecyclerViewRent" />
 
-                <TextView
+                <!--<TextView
                     android:id="@+id/housesRecyclerViewOwnerIdInfo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -99,7 +99,7 @@
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/customerRecyclerViewProfileImage"
-                    app:layout_constraintTop_toBottomOf="@+id/housesRecyclerViewHeatResource" />
+                    app:layout_constraintTop_toBottomOf="@+id/housesRecyclerViewHeatResource" />-->
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
