--- a/app/src/main/res/layout/activity_house_single_profile.xml
+++ b/app/src/main/res/layout/activity_house_single_profile.xml
@@ -4,58 +4,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/sinlgehousebackround">
+        android:background="@drawable/sinlge_house_backround">
 
         <ImageView
             android:id="@+id/singleHouseImageView"
-            android:layout_width="113dp"
-            android:layout_height="77dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/house" />
-
-        <TextView
-            android:id="@+id/singleHouseId"
-            android:layout_width="247dp"
-            android:layout_height="22dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="25dp"
-            android:text="HouseId"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:srcCompat="@drawable/single_house_room" />
 
         <TextView
             android:id="@+id/singleHouseAddress"
-            android:layout_width="247dp"
-            android:layout_height="22dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="25dp"
-            android:text="houseAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="5dp"
+            android:text="Adres"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/singleHouseId" />
-
-
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/singleHouseImageView" />
 
         <TextView
             android:id="@+id/singleHouseType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
             android:text="Ev Tipi"
             android:textColor="@color/black"
@@ -97,21 +83,6 @@
             app:layout_constraintTop_toBottomOf="@+id/singleHouseCountOfBedroom" />-->
 
         <TextView
-            android:id="@+id/singleHouseCountOfOwner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:text="countOfOwner"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/singleHouseType" />
-
-        <TextView
             android:id="@+id/singleHouseHeatResource"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -124,7 +95,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/singleHouseCountOfOwner" />
+            app:layout_constraintTop_toBottomOf="@+id/singleHouseType" />
 
         <TextView
             android:id="@+id/singleHouseInternetPaved"
@@ -172,51 +143,70 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singleHouseFloor" />
 
+        <TextView
+            android:id="@+id/singleHouseOwnersTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="30dp"
+            android:text="Evde Oturanlar"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/singleHouseRent"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/houseOwnersInfo"
+            android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/singleHouseRent">
+            app:layout_constraintTop_toBottomOf="@+id/singleHouseOwnersTitle">
 
             <TextView
                 android:id="@+id/singleHouseOwner1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
                 android:text=""
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:onClick="goToOwnerProfile1"/>
+                android:onClick="goToOwnerProfile1"
+                android:background="@color/colorAccent2"/>
 
             <TextView
                 android:id="@+id/singleHouseOwner2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
                 android:text=""
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:onClick="goToOwnerProfile2"/>
+                android:onClick="goToOwnerProfile2"
+                android:background="@color/colorAccent2"/>
 
             <TextView
                 android:id="@+id/singleHouseOwner3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
                 android:text=""
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:onClick="goToOwnerProfile3"/>
+                android:onClick="goToOwnerProfile3"
+                android:background="@color/colorAccent2"/>
 
         </LinearLayout>
 
@@ -225,11 +215,11 @@
             android:id="@+id/likeButton"
             android:layout_width="31dp"
             android:layout_height="34dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginTop="500dp"
+            android:layout_marginEnd="15dp"
             android:onClick="customerLikeHouse"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/singleHouseAddress"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_like" />
 
         <!--<ImageView
